# bazel-experiments

./: README.md
.github/workflows/: test-python.yml  test-rebuild.yml  test-rules-foreign-cc.yml  test-rv5-tools.yml  test-wasm.yml  test.yml
adk/: .gitignore  BUILD.bazel  MODULE.bazel
adk/agent1/: agent.py
adk/tools/: BUILD.bazel
bzlmod-migration-1/: README.md
bzlmod-migration-1/repo1/: BUILD.bazel  MODULE.bazel  script.sh
bzlmod-migration-1/repo2/: BUILD.bazel  MODULE.bazel  script.sh
bzlmod-migration-1/repo3/: BUILD.bazel  MODULE.bazel  script.sh
conda/: MODULE.bazel  eigen.cc  extensions.bzl
go-protoc-binary/: .bazelrc  MODULE.bazel  README.md
go-protoc-binary/proto/: BUILD.bazel  greeter.pb.go
go-protoc-binary/tools/: BUILD.bazel
js/e2e/npm_link_package-esm/lib/: BUILD.bazel  index.mjs
js/e2e/npm_link_package/lib/: BUILD.bazel
js/e2e/webpack_devserver/mylib/: index.js
js/e2e/webpack_devserver_esm/mylib/: index.js
llvm/: BUILD.bazel  MODULE.bazel  README.md  hello.cc
llvm/toolchain/: BUILD.bazel  cc_toolchain_config.bzl
llvm/toolchain/constraints/: BUILD.bazel
llvm/toolchain/platform/: BUILD.bazel
llvm/toolchain/startup/: entry.S  linker.ld  start.c
musl/: BUILD.bazel  MODULE.bazel  README.md
python/: MODULE.bazel  README.md  WORKSPACE  extension_for_whl_library.bzl  migration_info.md  query_direct_deps  resolved_deps.py
python-mod/: gazelle_python.yaml
python-mod/agent1/: BUILD.bazel  __main__.py
python/app/: BUILD.bazel
python/calculator/: BUILD.bazel  calculator_test.py
rebuild/: README.md
rebuild/1/: BUILD.bazel  hello.cc
rebuild/2/: hello.cc  hello.h
rebuild/3/: BUILD.bazel  hello.h
riscv64-rust-baremetal/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
riscv64-rust-baremetal/prg/: BUILD.bazel
riscv64-rust-baremetal/prg/src/: main.rs
rules-foreign-cc/: BUILD.bazel  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-rules-foreign-cc  bazel-testlogs
runfiles/: BUILD.bazel  MODULE.bazel  README.md  binary.sh  library.sh
runfiles/integration/: BUILD.bazel  MODULE.bazel  binary.sh  binary.sh.md
rv5-tools/: .bazelrc  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-rv5-tools  bazel-testlogs
rv5-tools/bazel/toolchain/muntjac-baremetal/: BUILD.bazel  cc_toolchain_config.bzl
rv5-tools/bazel/toolchain/muntjac-baremetal/wrappers/: ld
wasm/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum
wasm/protos/api/: BUILD.bazel  api.pb.client.go  api.pb.go  api.pb.server.go
wasm/server/: BUILD.bazel
wasm/static/: BUILD.bazel
wasm/tools/: BUILD.bazel
wasm/tools/protoc-gen-client/: BUILD.bazel
wasm/tools/protoc-gen-server/: BUILD.bazel
wasm/tools/toolchains/: BUILD.bazel
wasm/wasm/: BUILD.bazel  func_host.go  func_wasm.go  main.go
