module(name = "python-mod", version = "0.0.0")


bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "gazelle", version = "0.33.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.5.1")
bazel_dep(name = "rules_go", version = "0.58.2", repo_name = "io_bazel_rules_go")


python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12.2")
use_repo(python, "python_3_12_2")


pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    requirements_lock = "//third_party/python:requirements_lock.txt",
    #requirements_windows = "//:requirements_windows.txt",
    python_version = "3.12.2",
)
use_repo(pip, "pip")

