bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.11.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = [
        "//third_party:protobuf/0001-bazel-Remove-hardcoded-dependency-on-protoc-from-lan.patch",
        "//third_party:protobuf/0002-Switch-to-toolchains.patch",
    ],
    version = "29.3",
)

bazel_dep(name = "rules_go", version = "0.57.0")

####### PROTOBUF ##########
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    # Demonstrate overriding the default version
    version = "v28.0",
)
use_repo(protoc, "com_google_protobuf")

# NB: the `:all` here is critical.
register_toolchains("//tools/toolchains:all")

