module(
    name = "go-protoc-binary",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
)

bazel_dep(name = "aspect_bazel_lib", version = "2.11.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_go", version = "0.59.0")

