module(name = "bazel-experiments", version="")

bazel_dep(name = "rules_python", version = "1.7.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    requirements_lock = "//third_party:requirements_lock.txt",
    python_version = "3.11",
)
use_repo(pip, "pypi")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.11")
python.toolchain(python_version = "3.11")
