load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

build_test(
    name = "gen_rust_project",
    targets = [
        "@rules_rust//tools/rust_analyzer:gen_rust_project",
    ],
)

build_test(
    name = "rust_fmt",
    targets = [
        "@rules_rust//:rustfmt",
    ],
)
