module(
    name = "riscv64-rust-baremetal",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_riscv_gnu", version = "1.0.0")

riscv_toolchain = use_extension(
    "@toolchains_riscv_gnu//:extensions.bzl", "riscv_toolchain")
riscv_toolchain.riscv_none_elf()
use_repo(riscv_toolchain, "riscv_none_elf")

register_toolchains("@riscv_none_elf//toolchain:all")

bazel_dep(name = "platforms", version= "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_rust", version = "0.46.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021", 
    versions = [ "nightly/2024-07-01" ],
    sha256s = {
        "rustc-1.79.0-x86_64-unknown-linux-gnu.tar.xz": "a04cf42022d0a5faf01c31082bfb1dde9c38409f0ca6da90a3e40faa03e797ae",
        "clippy-1.79.0-x86_64-unknown-linux-gnu.tar.xz": "3fb282ee97626e4f25c4f6faac3997859b89f13983dd6fa111e25182dfcb91fa", 
        "cargo-1.79.0-x86_64-unknown-linux-gnu.tar.xz": "07fcadd27b645ad58ff4dae5ef166fd730311bbae8f25f6640fe1bfd2a1f3c3c", 
        "rustfmt-1.79.0-x86_64-unknown-linux-gnu.tar.xz": "4404d5e2881194a09d68888c45c21405e452b35418e04190caae1af108ea76df", 
        "llvm-tools-1.79.0-x86_64-unknown-linux-gnu.tar.xz": "3e4a9815d882bfb0cf4d4ec1e14181c44324bb3d04e851b9b5377b6a42b75eba", 
        "rust-std-1.79.0-riscv64gc-unknown-none-elf.tar.xz": "fa9da3f74fe7ca08406c68b8f967d5e6f6e89ae8703192f25d44f07c6a82de80"
    },
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
crate.annotation(
    additive_build_file = "//:anyhow.BUILD.bazel",
    crate = "anyhow",
    # Defined in additive_build_file.
    data = [":cargo_toml"],
    # Optional, you probably don't need this. Defaults to all from_cargo
    # invocations in this module.
    repositories = ["crates"],
    # Optional, you probably don't need this, defaults to "*".
    version = "*",
)
