load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/grahamjenson/bazel-golang-wasm-proto
gazelle(name = "gazelle")

buildifier(name = "buildifier")

