load("@gazelle//:def.bzl", "gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

# gazelle:prefix github.com/grahamjenson/bazel-golang-wasm-proto
gazelle(name = "gazelle")

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)
