load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "greeter_proto",
    srcs = ["greeter.proto"],
    deps = ["@protobuf//:any_proto"],
)

go_proto_library(
    name = "greeter_go_proto",
    importpath = "example.com/greeter_proto",
    proto = ":greeter_proto",
)

