load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")

package(default_visibility = ["//tools/toolchains:__pkg__"])

# Don't allow rules_go to compile the Go SDK with cgo enabled, as that
# would cause a dependency on a functional C++ toolchain.
# This value is referenced in the .bazelrc
platform(
    name = "no_cgo_host_platform",
    constraint_values = HOST_CONSTRAINTS + [
        "@rules_go//go/toolchain:cgo_off",
    ],
)
