load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc/toolchains:cc_toolchain.bzl", "cc_toolchain")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@toolchains_llvm//toolchain:cc_toolchain_config.bzl", "cc_toolchain_config")
load("@toolchains_llvm//toolchain/internal:system_module_map.bzl", "system_module_map")


cc_library(
    name = "startup",
    srcs = [
        "startup/entry.S",
        "startup/start.c",
    ],
    target_compatible_with = [
        "@platforms//cpu:riscv32",
        "@platforms//os:none",
        "//toolchain/constraints/march:serv_i",
    ],
    visibility = ["//visibility:public"],
    deps = [":startup/linker.ld"],
)

filegroup(
    name = "all-components-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin",
        ":compiler-components-riscv32-none",
        ":linker-components-riscv32-none",
    ],
)

filegroup(
    name = "archiver-files-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:ar",
        ":internal-use-tools-legacy",
    ],
)

filegroup(
    name = "assembler-files-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:as",
        ":internal-use-tools-legacy",
    ],
)

cc_toolchain(
    name = "cc-clang-riscv32-none",
    all_files = ":all-files-riscv32-none",
    ar_files = ":archiver-files-riscv32-none",
    as_files = ":assembler-files-riscv32-none",
    compiler_files = ":compiler-files-riscv32-none",
    dwp_files = ":dwp-files-riscv32-none",
    linker_files = ":linker-files-riscv32-none",
    module_map = ":module-riscv32-none",
    objcopy_files = ":objcopy-files-riscv32-none",
    strip_files = ":strip-files-riscv32-none",
    supports_header_parsing = True,
    toolchain_config = ":local-riscv32-none",
)

toolchain(
    name = "cc-toolchain-riscv32-none",
    exec_compatible_with = [
        "@@platforms//cpu:x86_64",
        "@@platforms//os:linux",
    ],
    target_compatible_with = [
        "@@platforms//cpu:riscv32",
        "@@platforms//os:none",
        "//toolchain/constraints:serv_i",
    ],
    toolchain = ":cc-clang-riscv32-none",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

native_binary(
    name = "clang-apply-replacements",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/clang-apply-replacements",
    out = "clang-apply-replacements",
)

native_binary(
    name = "clang-format",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/clang-format",
    out = "clang-format",
)

native_binary(
    name = "clang-tidy",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/clang-tidy",
    out = "clang-tidy",
)

native_binary(
    name = "clangd",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/clangd",
    out = "clangd",
)

filegroup(
    name = "compiler-components-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:clang",
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:extra_config_site",
        ":cxx_builtin_include_files-riscv32-none",
        ":sysroot-components-riscv32-none",
    ],
)

filegroup(
    name = "compiler-files-riscv32-none",
    srcs = [
        ":compiler-components-riscv32-none",
        ":internal-use-tools-legacy",
    ],
)

filegroup(
    name = "cxx_builtin_include_files-riscv32-none",
    srcs = ["@@toolchains_llvm++llvm+llvm_toolchain_llvm//:include"],
)

filegroup(
    name = "dwp-files-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:dwp",
        ":internal-use-tools-legacy",
    ],
)

filegroup(
    name = "internal-use-tools",
    srcs = ["@llvm_toolchain//:bin"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "internal-use-tools-legacy",
    srcs = [
        "bin/cc_wrapper.sh",
        "bin/clang-cpp",
        #"bin/clang-format",
        #"bin/clang-tidy",
        #"bin/clangd",
        "bin/ld.lld",
        "bin/llvm-ar",
        "bin/llvm-cov",
        "bin/llvm-dwp",
        "bin/llvm-nm",
        "bin/llvm-objcopy",
        "bin/llvm-objdump",
        "bin/llvm-profdata",
        "bin/llvm-strip",
    ],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "linker-components-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:ar",
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:clang",
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:ld",
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:lib_legacy",
        ":sysroot-components-riscv32-none",
    ],
)

filegroup(
    name = "linker-files-riscv32-none",
    srcs = [
        ":internal-use-tools-legacy",
        ":linker-components-riscv32-none",
    ],
)

native_binary(
    name = "llvm-cov",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/llvm-cov",
    out = "llvm-cov",
)

native_binary(
    name = "llvm-profdata",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/llvm-profdata",
    out = "llvm-profdata",
)

native_binary(
    name = "llvm-symbolizer",
    src = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:bin/llvm-symbolizer",
    out = "llvm-symbolizer",
)

# Use cc_toolchain_config from @toolchains_llvm, which has a different API
# than the one from @bazel_tools.
cc_toolchain_config(
    # The values of these flags was reconstructed by comparing the below result
    # with the API at:
    # https://github.com/bazel-contrib/toolchains_llvm/blob/4ff4da7006df6cbf443335c7d0874a49261771c4/toolchain/cc_toolchain_config.bzl
    name = "local-riscv32-none",
    exec_arch = "x86_64",
    exec_os = "linux",
    target_arch = "riscv32",
    target_os = "none",
    target_system_name = "riscv32-unknown-none-elf",
    toolchain_path_prefix = "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/",
    # This is relative to *this* directory... hopefully.
    tools_path_prefix = "bin/",
    wrapper_bin_prefix = "bin/",
    compiler_configuration = {
        "extra_compile_flags": [
            "-march=rv32i_zicsr",
            "-mabi=ilp32",
        ],
        "extra_link_flags": [
            "-nostartfiles",
            "-Tstartup/linker.ld",
            "-mabi=ilp32",
        ],
        # This was found by trial and error. Mostly by error.
        "stdlib": "libc++",
        "cxx_standard": "c++17",
        "conly_flags": None,
        "sysroot_path": None,
        "compile_flags": None,
        "cxx_flags": None,
        "link_flags": None,
        "archive_flags": None,
        "link_libs": None,
        "opt_compile_flags": None,
        "opt_link_flags": None,
        "dbg_compile_flags": None,
        "fastbuild_compile_flags": None,
        "coverage_compile_flags": None,
        "coverage_link_flags": None,
        "unfiltered_compile_flags": None,
        "extra_cxx_flags": None,
        "extra_archive_flags": None,
        "extra_link_libs": None,
        "extra_opt_compile_flags": None,
        "extra_opt_link_flags": None,
        "extra_dbg_compile_flags": None,
        "extra_dbg_link_flags": None,
        "extra_coverage_compile_flags": None,
        "extra_coverage_link_flags": None,
        "extra_unfiltered_compile_flags": None,
    },
    cxx_builtin_include_directories = [
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/include/c++/v1",
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/20/include",
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/include/riscv32-unknown-none-elf/c++/v1",
    ],
    major_llvm_version = 20,
)

system_module_map(
    name = "module-riscv32-none",
    cxx_builtin_include_directories = [
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/include/c++/v1",
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/20/include",
        "%workspace%/external/toolchains_llvm++llvm+llvm_toolchain_llvm/include/riscv32-unknown-none-elf/c++/v1",
    ],
    cxx_builtin_include_files = "@llvm_toolchain//:cxx_builtin_include_files-riscv32-none",
    sysroot_files = ":sysroot-components-riscv32-none",
    sysroot_path = "",
)

filegroup(
    name = "objcopy-files-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:objcopy",
        ":internal-use-tools-legacy",
    ],
)

cc_import(
    name = "omp",
    shared_library = "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:lib/libomp.so",
)

filegroup(
    name = "strip-files-riscv32-none",
    srcs = [
        "@@toolchains_llvm++llvm+llvm_toolchain_llvm//:strip",
        ":internal-use-tools-legacy",
    ],
)

filegroup(
    name = "sysroot-components-riscv32-none",
    srcs = [],
)

