load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")
load("@rules_riscv64_baremetal//build/bin:defs.bzl", "disasm")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "my_program",
    edition = "2021",
    srcs = ["src/main.rs"],
    platform = "//build:platform",
)

rust_doc(
    name = "docs",
    crate = ":my_program",
)

disasm(
    name = "disasm",
    src = ":my_program",
)
