load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@lit2md//build:macros.bzl", "lit2md2")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "test",
    srcs = [
        "binary.sh",
    ],
    data = [
        "@runfiles//:binary",
        "@rules_shell//shell/runfiles",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

lit2md2(
    name = "binary_sh",
    src = "binary.sh",
    out = "binary.sh.md",
)

write_source_files(
    name = "update_md",
    files = {
        "binary.sh.md": ":binary_sh",
    },
)
