module(
    name = "integration",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "lit2md", version = "0.2.3")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "runfiles", version = "0.6.1")
local_path_override(
    module_name = "runfiles",
    path = "../",
)
