load("@rules_go//go:def.bzl", "go_binary", "go_library")

#go_library(
    #name = "go_default_library",
    #srcs = ["func_host.go"],
    #importpath = "github.com/grahamjenson/bazel-golang-wasm-proto/server",
    #visibility = ["//visibility:private"],
#)

go_binary(
    name = "server",
    args = [
        "--bootstrap-css-path=$(location @com_github_bootstrap//file:bootstrap.css)",
        "--wasm-path=$(location //wasm:app.wasm)",
        "--icon-path=$(location //static:icon)",
    ],
    data = [
        "//static:icon",
        "//wasm:app.wasm",
        "@com_github_bootstrap//file:bootstrap.css",
        "@com_github_ec2instances//file:instances.json",
    ],
    embed = ["//wasm:go_default_library"],
    visibility = ["//visibility:public"],
)
