load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")
load("@rules_go//proto:compiler.bzl", "go_proto_compiler")

package(default_visibility = ["//visibility:public"])

go_proto_compiler(
    name = "go_server",
    import_path_option = True,
    options = ["plugins=server"],
    plugin = "//tools/protoc-gen-server",
    suffix = ".pb.server.go",
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_compiler(
    name = "go_client",
    import_path_option = True,
    options = ["plugins=client"],
    plugin = "//tools/protoc-gen-client",
    suffix = ".pb.client.go",
    visibility = ["//visibility:public"],
    deps = [],
)

# Don't allow rules_go to compile the Go SDK with cgo enabled, as that
# would cause a dependency on a functional C++ toolchain.
# This value is referenced in the .bazelrc
platform(
    name = "no_cgo_host_platform",
    constraint_values = HOST_CONSTRAINTS + [
        "@rules_go//go/toolchain:cgo_off",
    ],
)
