load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

filegroup(name = "files",
    srcs = [
        "main.go",
    ],

    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        ":files",
    ],
    importpath = "github.com/grahamjenson/bazel-golang-wasm-proto/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_maxence_charriere_go_app_v9//pkg/app:go_default_library",
    ],
)

go_binary(
    name = "app.wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
