load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

filegroup(
    name = "files",
    srcs = [
        "main.go",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wasm_files",
    srcs = [
        "func_wasm.go",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "func_wasm.go",
        "main.go",
    ],
    importpath = "github.com/grahamjenson/bazel-golang-wasm-proto/wasm",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_maxence_charriere_go_app_v9//pkg/app:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_api//sheets/v4:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_binary(
    name = "app.wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
