platform(
    name = "rv32imac",
    constraint_values = [
        "@platforms//cpu:riscv32",
        "@platforms//os:none",
        "//toolchain/constraints:imac",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "rv64imac",
    constraint_values = [
        "@platforms//cpu:riscv64",
        "@platforms//os:none",
        "//toolchain/constraints:imac",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "rv32i",
    constraint_values = [
        "@platforms//cpu:riscv32",
        "@platforms//os:none",
        "//toolchain/constraints:i",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "serv_rv32i",
    constraint_values = [
        "@platforms//cpu:riscv32",
        "@platforms//os:none",
        "//toolchain/constraints:serv_i",
    ],
    visibility = ["//visibility:public"],
)

