package(default_visibility = ["//visibility:public"])

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

filegroup(
  name = 'wrappers',
  srcs = glob([
    'wrappers/**',
  ]),
)

filegroup(
  name = 'all_files',
  srcs = [
    '@muntjac_toolchain//:toolchain',
    '//third_party/toolchains/muntjac-sysroot/riscv64-unknown-elf:sysroot',
    ':wrappers',
  ],
)

cc_toolchain_config(name = "muntjac_baremetal_toolchain_config")

cc_toolchain(
    name = "muntjac_baremetal_toolchain",
    toolchain_identifier = "muntjac-toolchain",
    toolchain_config = ":muntjac_baremetal_toolchain_config",
    all_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
)

cc_toolchain_suite(
    name = "toolchain",
    toolchains = {
        "riscv64": ":muntjac_baremetal_toolchain",
    },
    tags = ["manual"],
)
