package(default_visibility = ["//visibility:public"])

load(":cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

filegroup(
  name = 'wrappers',
  srcs = glob([
    'wrappers/**',
  ]),
)

filegroup(
  name = 'all_files',
  srcs = [
    '@muntjac_toolchain//:toolchain',
    ':wrappers',
  ],
)

cc_toolchain_config(name = "muntjac_baremetal_toolchain_config")

cc_toolchain(
    name = "muntjac_baremetal_toolchain",
    toolchain_identifier = "muntjac-toolchain",
    toolchain_config = ":muntjac_baremetal_toolchain_config",
    all_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":empty",
    linker_files = ":all_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
)

# DO NOT USE THIS. It's an old way to register toolchains.
cc_toolchain_suite(
    name = "toolchain",
    toolchains = {
        "riscv64": ":muntjac_baremetal_toolchain",
        "k8": "@local_config_cc//:cc-compiler-k8",
    },
    tags = ["manual"],
)

# Use this label in register_toolchains in //WORKSPACE
toolchain(
    name = "muntjac_baremetal",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:none",
        "@platforms//cpu:riscv64",
    ],
    toolchain = ":muntjac_baremetal_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

